# bee-cli

./: README.md  pyproject.toml
src/bee/: __init__.py  cli.py  kube.py  repl.py  resolver.py  snapshot.py  workspace.py
